--- a/src/layouts/MyLayout.astro
+++ b/src/layouts/MyLayout.astro
@@ -1,5 +1,6 @@
 ---
 const { title } = Astro.props;
+import 'katex/dist/katex.min.css';
 ---
 <html lang="en">
   <head>
@@ -7,7 +8,7 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <title>{title}</title>
     
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.10/dist/katex.min.css" integrity="sha384-M48Ww9uD/hN6R3wzXlX0D3vY8zZ4W2N3zX5tF1GzJ6d4N7Zf5yG/7F6F6d5N7N5A5/2F" crossorigin="anonymous">
+	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.10/dist/katex.min.css" integrity="sha384-M48Ww9uD/hN6R3wzXlX0D3vY8zZ4W2N3zX5tF1GzJ6d4N7Zf5yG/7F6F6d5N7N5A5/2F" crossorigin="anonymous"> -->
 
   </head>
   <body>
