--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import 'katex/dist/katex.min.css';
 	</head>
 	<body>
 		<h1>競賽程式</h1>
-		<a href="/CPPBook/lectures/basics/"> Basic C++ </a><br>
+		<a href="/CPPBook/lectures/hw/"> HW </a><br>
 		<a href="/CPPBook/lectures/stl/"> STL </a>
 	</body>
 </html>
