--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,9 @@ import 'katex/dist/katex.min.css';
 	<body>
 		<h1>競賽程式</h1>
 		<a href="/CPPBook/lectures/hw/"> HW </a><br>
-		<a href="/CPPBook/lectures/stl/"> STL </a>
+		<a href="/CPPBook/lectures/stl/"> STL </a><br>
+		<a href="/CPPBook/lectures/greedy/"> Greedy </a><br>
+		<a href="/CPPBook/lectures/dc/"> Divide and Conquer </a><br>
+		<a href="/CPPBook/lectures/dp/"> Dynamic Programming</a>
 	</body>
 </html>
