--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,8 @@ import 'katex/dist/katex.min.css';
 		<a href="/CPPBook/lectures/stl/"> STL </a><br>
 		<a href="/CPPBook/lectures/greedy/"> Greedy </a><br>
 		<a href="/CPPBook/lectures/dc/"> Divide and Conquer </a><br>
-		<a href="/CPPBook/lectures/dp/"> Dynamic Programming</a>
+    <a href="/CPPBook/lectures/dp/"> Dynamic Programming</a><br>
+    <a href="/CPPBook/lectures/graph/"> Graph </a><br>
+		<a href="/CPPBook/lectures/shortest-path/"> Shortest Path </a>
 	</body>
 </html>
