--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,6 +20,7 @@ import 'katex/dist/katex.min.css';
 		<a href="/CPPBook/lectures/dc/"> Divide and Conquer </a><br>
     <a href="/CPPBook/lectures/dp/"> Dynamic Programming</a><br>
     <a href="/CPPBook/lectures/graph/"> Graph </a><br>
-		<a href="/CPPBook/lectures/shortest-path/"> Shortest Path </a>
+    <a href="/CPPBook/lectures/shortest-path/"> Shortest Path </a> <br>
+		<a href="/CPPBook/lectures/tree1/"> Tree(1) </a>
 	</body>
 </html>
