--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,6 +21,11 @@ import 'katex/dist/katex.min.css';
     <a href="/CPPBook/lectures/dp/"> Dynamic Programming</a><br>
     <a href="/CPPBook/lectures/graph/"> Graph </a><br>
     <a href="/CPPBook/lectures/shortest-path/"> Shortest Path </a> <br>
-		<a href="/CPPBook/lectures/tree1/"> Tree(1) </a>
+	<a href="/CPPBook/lectures/tree1/"> Tree(1) </a> <br>
+	<a href="/CPPBook/lectures/math/"> Math </a> <br>
+	<!-- undone
+	<a href="/CPPBook/lectures/ds1/"> Data Structure(1) </a> <br>
+	<a href="/CPPBook/lectures/lca/"> LCA </a> <br>
+	-->
 	</body>
 </html>
