--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,6 +25,7 @@ import 'katex/dist/katex.min.css';
 	<a href="/CPPBook/lectures/math/"> Math </a> <br>
 	<a href="/CPPBook/lectures/ds1/"> Data Structure(1) </a> <br>
 	<a href="/CPPBook/lectures/ds2/"> Data Structure(2) </a> <br>
+	<a href="/CPPBook/lectures/checkpoint1/"> checkpoint(1) </a> <br>
 	<!-- undone
 	<a href="/CPPBook/lectures/tree2/"> Tree(2) </a> <br>
 	<a href="/CPPBook/lectures/lca/"> LCA </a> <br>
