added sparse table

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,8 +27,9 @@ import 'katex/dist/katex.min.css';
 	<a href="/CPPBook/lectures/ds2/"> Data Structure(2) </a> <br>
 	<a href="/CPPBook/lectures/checkpoint1/"> checkpoint(1) </a> <br>
 	<a href="/CPPBook/lectures/bit/"> BIT </a> <br>
-	<!-- undone
+	<a href="/CPPBook/lectures/sparse-table/"> Sparse Table </a> <br>
 	<a href="/CPPBook/lectures/tree2/"> Tree(2) </a> <br>
+	<!-- undone
 	<a href="/CPPBook/lectures/lca/"> LCA </a> <br>
 	-->
 	</body>
