added tree3, cc

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,19 +18,18 @@ import 'katex/dist/katex.min.css';
 		<a href="/CPPBook/lectures/stl/"> STL </a><br>
 		<a href="/CPPBook/lectures/greedy/"> Greedy </a><br>
 		<a href="/CPPBook/lectures/dc/"> Divide and Conquer </a><br>
-    <a href="/CPPBook/lectures/dp/"> Dynamic Programming</a><br>
-    <a href="/CPPBook/lectures/graph/"> Graph </a><br>
-    <a href="/CPPBook/lectures/shortest-path/"> Shortest Path </a> <br>
-	<a href="/CPPBook/lectures/tree1/"> Tree(1) </a> <br>
-	<a href="/CPPBook/lectures/math/"> Math </a> <br>
-	<a href="/CPPBook/lectures/ds1/"> Data Structure(1) </a> <br>
-	<a href="/CPPBook/lectures/ds2/"> Data Structure(2) </a> <br>
-	<a href="/CPPBook/lectures/checkpoint1/"> checkpoint(1) </a> <br>
-	<a href="/CPPBook/lectures/bit/"> BIT </a> <br>
-	<a href="/CPPBook/lectures/sparse-table/"> Sparse Table </a> <br>
-	<a href="/CPPBook/lectures/tree2/"> Tree(2) </a> <br>
-	<!-- undone
-	<a href="/CPPBook/lectures/lca/"> LCA </a> <br>
-	-->
+		<a href="/CPPBook/lectures/dp/"> Dynamic Programming</a><br>
+		<a href="/CPPBook/lectures/graph/"> Graph </a><br>
+		<a href="/CPPBook/lectures/shortest-path/"> Shortest Path </a> <br>
+		<a href="/CPPBook/lectures/tree1/"> Tree(1) </a> <br>
+		<a href="/CPPBook/lectures/math/"> Math </a> <br>
+		<a href="/CPPBook/lectures/ds1/"> Data Structure(1) </a> <br>
+		<a href="/CPPBook/lectures/ds2/"> Data Structure(2) </a> <br>
+		<a href="/CPPBook/lectures/checkpoint1/"> checkpoint(1) </a> <br>
+		<a href="/CPPBook/lectures/bit/"> BIT </a> <br>
+		<a href="/CPPBook/lectures/sparse-table/"> Sparse Table </a> <br>
+		<a href="/CPPBook/lectures/tree2/"> Tree(2) </a> <br>
+		<a href="/CPPBook/lectures/tree3/"> Tree(3) </a><br>
+		<a href="/CPPBook/lectures/connected-component/"> Connected Component </a><br>
 	</body>
 </html>
