added computational geometry

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,5 +31,6 @@ import 'katex/dist/katex.min.css';
 		<a href="/CPPBook/lectures/tree2/"> Tree(2) </a> <br>
 		<a href="/CPPBook/lectures/tree3/"> Tree(3) </a><br>
 		<a href="/CPPBook/lectures/connected-component/"> Connected Component </a><br>
+		<a href="/CPPBook/lectures/computational-geometry/"> Computational Geometry</a><br>
 	</body>
 </html>
