--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,5 +32,6 @@ import 'katex/dist/katex.min.css';
 		<a href="/CPPBook/lectures/tree3/"> Tree(3) </a><br>
 		<a href="/CPPBook/lectures/connected-component/"> Connected Component </a><br>
 		<a href="/CPPBook/lectures/computational-geometry/"> Computational Geometry</a><br>
+		<a href="/CPPBook/lectures/string/"> String </a><br>
 	</body>
 </html>
